--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
     <h1 style="text-align: center;">Chat with Doctor</h1>
     <div class="everything">
       
-      <div class="input-everything">
+      <div class="input-everything" style="margin-bottom: 70px;">
         <div>
           <input class="message" placeholder="Enter message" style="color: black; font-size: 16px;">
           <button class="submit-for-chat" style="color: black; font-size: 16px;">Submit</button>
